# foto-tokei

./: CMakeLists.txt  README.md
src/: main.cpp  main.qml  tokei.cpp  tokei.hpp
